[gd_scene load_steps=15 format=2]

[ext_resource path="res://source/ConveyorBelt/ConveyorBelt.tres" type="Material" id=1]
[ext_resource path="res://source/ConveyorBelt/ConveyorBelt.gd" type="Script" id=2]
[ext_resource path="res://assets/images/custom/conveyorbelt/conveyorbelt2.png" type="Texture" id=3]

[sub_resource type="CubeMesh" id=1]
resource_local_to_scene = true
size = Vector3( 2, 1, 2 )

[sub_resource type="PlaneMesh" id=5]
resource_local_to_scene = true

[sub_resource type="PlaneMesh" id=6]
resource_local_to_scene = true

[sub_resource type="PlaneMesh" id=4]
resource_local_to_scene = true
size = Vector2( 2, 1 )

[sub_resource type="SpatialMaterial" id=10]
resource_local_to_scene = true
albedo_texture = ExtResource( 3 )
uv1_scale = Vector3( 0.5, 0.5, 0.5 )
uv1_offset = Vector3( 0, -0.25, -0.25 )
uv1_triplanar = true

[sub_resource type="PlaneMesh" id=11]
resource_local_to_scene = true
size = Vector2( 2, 1 )

[sub_resource type="SpatialMaterial" id=8]

[sub_resource type="SpatialMaterial" id=9]

[sub_resource type="PlaneMesh" id=7]
resource_local_to_scene = true
size = Vector2( 2, 1 )

[sub_resource type="BoxShape" id=12]
resource_local_to_scene = true
extents = Vector3( 1, 0.5, 1 )

[sub_resource type="BoxShape" id=13]
resource_local_to_scene = true
extents = Vector3( 1, 0.6, 1 )

[node name="ConveyorBelt" type="StaticBody"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="Top" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
mesh = SubResource( 5 )
material/0 = ExtResource( 1 )

[node name="Bottom" type="MeshInstance" parent="."]
transform = Transform( 1, -8.74228e-08, -8.74228e-08, -8.74228e-08, -1, 0, -8.74228e-08, 7.64274e-15, -1, 0, -0.5, 0 )
mesh = SubResource( 6 )
material/0 = ExtResource( 1 )

[node name="Front" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -1 )
mesh = SubResource( 4 )
material/0 = SubResource( 10 )

[node name="Left" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, -1, 0, 5.96046e-08 )
mesh = SubResource( 11 )
material/0 = SubResource( 8 )

[node name="Right" type="MeshInstance" parent="."]
transform = Transform( 1.31134e-07, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, -1.31134e-07, -5.73206e-15, 1, 0, 5.96046e-08 )
mesh = SubResource( 11 )
material/0 = SubResource( 9 )

[node name="Back" type="MeshInstance" parent="."]
transform = Transform( 1, -8.9407e-08, -8.74228e-08, -8.74228e-08, 4.37114e-08, -1, 8.9407e-08, 1, 4.37114e-08, 0, 0, 1 )
mesh = SubResource( 7 )
material/0 = SubResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 12 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )
shape = SubResource( 13 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
